force-app/main/default/objects/Partner_Registration__c/Partner_Registration__c.object-meta.xml
<CustomObject>
    <description>created for GTMS-20584</description>
    <label>Partner Registration</label>
    <nameField>
        <displayFormat>PR-{000000}</displayFormat>
        <label>Partner Registration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Registrations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>