force-app/main/default/objects/Partner_Registration__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partner Registrations (Account)</relationshipLabel>
    <relationshipName>Partner_Registrations2</relationshipName>
    <type>Lookup</type>
</CustomField>