force-app/main/default/objects/Partner_Registration__c/fields/CAM_Owner__c.field-meta.xml
<CustomField>
    <fullName>CAM_Owner__c</fullName>
    <label>CAM Owner</label>
    <length>1300</length>
    <type>LongTextArea</type>
</CustomField>