force-app/main/default/objects/Partner_Registration__c/fields/CR__c.field-meta.xml
<CustomField>
    <fullName>CR__c</fullName>
    <label>PAM Recommendation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Create New Opportunity</fullName>
            </value>
            <value>
                <fullName>Create Amendment Opportunity</fullName>
            </value>
            <value>
                <fullName>Match to Existing Opportunity</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Existing</fullName>
            </value>
            <value>
                <fullName>Amend</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>