force-app/main/default/objects/Partner_Registration__c/fields/Fleet_Segment__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Segment__c</fullName>
    <label>Fleet Segment</label>
    <length>1300</length>
    <type>LongTextArea</type>
</CustomField>