force-app/main/default/objects/Partner_Registration__c/fields/Geography__c.field-meta.xml
<CustomField>
    <fullName>Geography__c</fullName>
    <label>Geography</label>
    <length>1300</length>
    <type>LongTextArea</type>
</CustomField>