force-app/main/default/objects/Partner_Registration__c/fields/Has_Agreed_to_Privacy_Policy__c.field-meta.xml
<CustomField>
    <fullName>Has_Agreed_to_Privacy_Policy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Agreed to Privacy Policy</label>
    <type>Checkbox</type>
</CustomField>