force-app/main/default/objects/Partner_Registration__c/fields/Inbound_Form_Fleet_Range__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Form_Fleet_Range__c</fullName>
    <label>Inbound Form Fleet Range</label>
    <length>255</length>
    <type>Text</type>
</CustomField>