force-app/main/default/objects/Partner_Registration__c/fields/Key_Customer_Insight__c.field-meta.xml
<CustomField>
    <fullName>Key_Customer_Insight__c</fullName>
    <defaultValue>false</defaultValue>
    <description>added for GTMS-26098</description>
    <label>Key Customer Insight</label>
    <type>Checkbox</type>
</CustomField>