force-app/main/default/objects/Partner_Registration__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Partner Registrations</relationshipLabel>
    <relationshipName>Partner_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>