force-app/main/default/objects/Partner_Registration__c/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <label>Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bing</fullName>
            </value>
            <value>
                <fullName>Customer Referral</fullName>
            </value>
            <value>
                <fullName>Deal Reg Form</fullName>
            </value>
            <value>
                <fullName>Deal Reg Form - Ungated</fullName>
            </value>
            <value>
                <fullName>Deal Reg Form - Industrial</fullName>
            </value>
            <value>
                <fullName>Events</fullName>
            </value>
            <value>
                <fullName>Partner referral</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Partner Application Form</fullName>
            </value>
            <value>
                <fullName>Partner business registration</fullName>
            </value>
            <value>
                <fullName>Deal Registration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>