force-app/main/default/objects/Partner_Registration__c/fields/Matched_Account__c.field-meta.xml
<CustomField>
    <fullName>Matched_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Matched Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partner Registrations (Matched Account)</relationshipLabel>
    <relationshipName>Partner_Registrations1</relationshipName>
    <type>Lookup</type>
</CustomField>