force-app/main/default/objects/Partner_Registration__c/fields/Most_Recent_Source__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Source__c</fullName>
    <label>Most Recent Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>