force-app/main/default/objects/Partner_Registration__c/fields/Number_of_Assets__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Assets__c</fullName>
    <label>Number of Assets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>