force-app/main/default/objects/Partner_Registration__c/fields/Owner_Manager__c.field-meta.xml
<CustomField>
    <fullName>Owner_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>created for GTMS-28939</description>
    <label>Owner Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Partner_Registrations1</relationshipName>
    <type>Lookup</type>
</CustomField>