force-app/main/default/objects/Partner_Registration__c/fields/PAM__c.field-meta.xml
<CustomField>
    <fullName>PAM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PAM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Partner_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>