force-app/main/default/objects/Partner_Registration__c/fields/PAM_Review_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>PAM_Review_Date_Time__c</fullName>
    <description>created for GTMS-28939</description>
    <label>PAM Review Date/Time</label>
    <type>DateTime</type>
</CustomField>