force-app/main/default/objects/Partner_Registration__c/fields/Partner_Program__c.field-meta.xml
<CustomField>
    <fullName>Partner_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>GTMS-26124 &amp; GTMS-26107: Created as  part of Partners H1 project</description>
    <label>Partner Program</label>
    <referenceTo>Partner_Program__c</referenceTo>
    <relationshipLabel>Partner Registrations</relationshipLabel>
    <relationshipName>Partner_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>