force-app/main/default/objects/Partner_Registration__c/fields/Partner_Program_Segment__c.field-meta.xml
<CustomField>
    <fullName>Partner_Program_Segment__c</fullName>
    <label>Partner Program Segment</label>
    <length>1300</length>
    <type>LongTextArea</type>
</CustomField>