force-app/main/default/objects/Partner_Registration__c/fields/Partner_Representative_Email__c.field-meta.xml
<CustomField>
    <fullName>Partner_Representative_Email__c</fullName>
    <description>GTMS-25477: Created as part of Partner Application phase 2 hypercare issue to store the Partner Representative Email Field value from lead.</description>
    <label>Partner Representative Email</label>
    <length>120</length>
    <type>Text</type>
</CustomField>