force-app/main/default/objects/Partner_Registration__c/fields/Partner_Team_Alignment__c.field-meta.xml
<CustomField>
    <fullName>Partner_Team_Alignment__c</fullName>
    <description>GTMS-20584: Created as part of Partner Alignment project</description>
    <label>Partner Team Alignment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Partner Services</fullName>
            </value>
            <value>
                <fullName>MNO/FMC</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>ISV</fullName>
            </value>
            <value>
                <fullName>Channel</fullName>
                <isActive>false</isActive>
                <label>Channel</label>
            </value>
            <value>
                <fullName>Ecosystem</fullName>
                <isActive>false</isActive>
                <label>Ecosystem</label>
            </value>
            <value>
                <fullName>Installer</fullName>
                <isActive>false</isActive>
                <label>Installer</label>
            </value>
            <value>
                <fullName>Referral</fullName>
                <isActive>false</isActive>
                <label>Referral</label>
            </value>
            <value>
                <fullName>Resale</fullName>
                <isActive>false</isActive>
                <label>Resale</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>