force-app/main/default/objects/Partner_Registration__c/fields/Product_Interest_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Interest_Type__c</fullName>
    <label>Product Interest Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fleet/Industrial Deal</fullName>
            </value>
            <value>
                <fullName>Onsite Security Cameras</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>