force-app/main/default/objects/Partner_Registration__c/fields/Sales_Program_Type__c.field-meta.xml
<CustomField>
    <fullName>Sales_Program_Type__c</fullName>
    <label>Sales Program Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Subsidy</fullName>
            </value>
            <value>
                <fullName>Premium Discount</fullName>
            </value>
            <value>
                <fullName>Unpaid Referral</fullName>
            </value>
            <value>
                <fullName>Paid Referral</fullName>
            </value>
            <value>
                <fullName>Resale</fullName>
            </value>
            <value>
                <fullName>Whitelabel</fullName>
            </value>
            <value>
                <fullName>Teaming</fullName>
            </value>
            <value>
                <fullName>Technology Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>