force-app/main/default/objects/Partner_Registration__c/fields/SLA_Due_DateTime__c.field-meta.xml
<CustomField>
    <fullName>SLA_Due_DateTime__c</fullName>
    <description>created for GTMS-28939</description>
    <label>SLA Due DateTime</label>
    <type>DateTime</type>
</CustomField>