force-app/main/default/objects/Partner_Registration__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>PAM Reviewed</fullName>
            </value>
            <value>
                <fullName>PAM Approved</fullName>
            </value>
            <value>
                <fullName>PAM Denied</fullName>
            </value>
            <value>
                <fullName>AE Accepted</fullName>
            </value>
            <value>
                <fullName>AE Approved</fullName>
            </value>
            <value>
                <fullName>AE Denied</fullName>
            </value>
            <value>
                <fullName>AE Ignored</fullName>
            </value>
            <value>
                <fullName>New Application</fullName>
            </value>
            <value>
                <fullName>Under Review</fullName>
            </value>
            <value>
                <fullName>Approved by PAM</fullName>
            </value>
            <value>
                <fullName>Approved by Leaders</fullName>
            </value>
            <value>
                <fullName>New User Registration</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>Denied at Closing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>