force-app/main/default/objects/Partner_Registration__c/fields/Tell_Us_About_Your_Company__c.field-meta.xml
<CustomField>
    <fullName>Tell_Us_About_Your_Company__c</fullName>
    <description>GTMS-25477: Created as part of Partner Application Phase 2 project Hypercare to store the Lead Description field value from Partner Application Lead.</description>
    <label>Tell Us About Your Company</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>