force-app/main/default/objects/Partner_Registration__c/recordTypes/Deal_Registration.recordType-meta.xml
<RecordType>
    <fullName>Deal_Registration</fullName>
    <active>true</active>
    <label>Deal Registration</label>
</RecordType>