force-app/main/default/objects/Partner_Registration__c/recordTypes/Partner_Application.recordType-meta.xml
<RecordType>
    <fullName>Partner_Application</fullName>
    <active>true</active>
    <label>Partner Application</label>
</RecordType>