force-app/main/default/objects/Partner_Registration__c/recordTypes/User_Authorization.recordType-meta.xml
<RecordType>
    <fullName>User_Authorization</fullName>
    <active>true</active>
    <label>Partner User Registration</label>
</RecordType>