force-app/main/default/objects/Partner_Registration__c/validationRules/Owner_Cannot_Be_Assigned_As_PAM.validationRule-meta.xml
<ValidationRule>
    <fullName>Owner_Cannot_Be_Assigned_As_PAM</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Status__c , &apos;PAM Reviewed&apos;) , ISCHANGED( OwnerId ), ( OwnerId =  PAM__c  ||  Owner:User.Profile.Name  = &apos;Samsara Channel Account Managers&apos;))</errorConditionFormula>
    <errorMessage>Once PR Status is &apos;PAM Reviewed&apos;, PR Owner cannot be reassigned to PAM</errorMessage>
</ValidationRule>