force-app/main/default/objects/Partner_Registration__c/validationRules/Partner_User_Registration_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Partner_User_Registration_Validation</fullName>
    <active>true</active>
    <description>GTMS-22483: Created as part of Partner Application phase 2 project</description>
    <errorConditionFormula>AND(
     RecordType.DeveloperName == &apos;User_Authorization&apos;,
     ISPICKVAL(Status__c,&apos;Approved&apos;),
     ISCHANGED(Status__c),
     NOT(ISPICKVAL(Partner_Account__r.Partner_Status__c,&apos;Transacting Partner&apos;))

)</errorConditionFormula>
    <errorMessage>User registration can be approved only for Transacting Partners.</errorMessage>
</ValidationRule>