force-app/main/default/objects/Partner_Registration__c/listViews/All_My_Deal_Registrations.listView-meta.xml
<ListView>
    <fullName>All_My_Deal_Registrations</fullName>
    <columns>NAME</columns>
    <columns>Company__c</columns>
    <columns>Partner_Account__c</columns>
    <columns>Partner_Contact__c</columns>
    <columns>Status__c</columns>
    <columns>CR__c</columns>
    <columns>AE_Outcome__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Partner_Registration__c.Deal_Registration</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New,PAM Reviewed</value>
    </filters>
    <label>Partners: My Open Deal Registrations</label>
    <sharedTo>
        <allPartnerUsers></allPartnerUsers>
    </sharedTo>
</ListView>