force-app/main/default/objects/Partner_Registration__c/listViews/All_Partner_Application.listView-meta.xml
<ListView>
    <fullName>All_Partner_Application</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Partner_Team_Alignment__c</columns>
    <columns>PAM__c</columns>
    <columns>Partner_Account__c</columns>
    <columns>Partner_Contact__c</columns>
    <columns>Partner_Account_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All New Partner Applications</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>