force-app/main/default/objects/Partner_Registration__c/listViews/All_User_Authorization.listView-meta.xml
<ListView>
    <fullName>All_User_Authorization</fullName>
    <columns>NAME</columns>
    <columns>Created_Date__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Status__c</columns>
    <columns>Email__c</columns>
    <columns>PAM__c</columns>
    <columns>Partner_Contact__c</columns>
    <columns>Partner_Account__c</columns>
    <columns>Partner_Account_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Created_Date__c</field>
        <operation>greaterThan</operation>
        <value>10/1/2025 12:00 AM</value>
    </filters>
    <filters>
        <field>PAM__c</field>
        <operation>equals</operation>
        <value>ranjith poladi</value>
    </filters>
    <label>All New Partner User Registrations</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>