force-app/main/default/objects/Partner_Registration__c/listViews/Approved_Deal_Registrations.listView-meta.xml
<ListView>
    <fullName>Approved_Deal_Registrations</fullName>
    <columns>NAME</columns>
    <columns>Company__c</columns>
    <columns>Partner_Account__c</columns>
    <columns>Partner_Contact__c</columns>
    <columns>Status__c</columns>
    <columns>CR__c</columns>
    <columns>AE_Outcome__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>AE Approved</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Partner_Registration__c.Deal_Registration</value>
    </filters>
    <label>My Approved Deal Registrations</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>