force-app/main/default/objects/Partner_Registration__c/listViews/AWH_Service_Partner_Applications.listView-meta.xml
<ListView>
    <fullName>AWH_Service_Partner_Applications</fullName>
    <columns>NAME</columns>
    <columns>Created_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Partner_Account__c</columns>
    <columns>Partner_Contact__c</columns>
    <columns>Partner_Account_Status__c</columns>
    <columns>PAM__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Partner_Registration__c.Partner_Application</value>
    </filters>
    <filters>
        <field>Partner_Team_Alignment__c</field>
        <operation>equals</operation>
        <value>Partner Services</value>
    </filters>
    <label>All Service Partner Applications</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>