force-app/main/default/objects/Partner_Registration__c/listViews/Internal_MY_Deal_Reg_Pending_AE_Review.listView-meta.xml
<ListView>
    <fullName>Internal_MY_Deal_Reg_Pending_AE_Review</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Company__c</columns>
    <columns>PAM__c</columns>
    <columns>Partner_Account__c</columns>
    <columns>PAM_Review_Date__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>PAM Reviewed</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Partner_Registration__c.Deal_Registration</value>
    </filters>
    <label>My Deal Reg Pending AE Review</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>